Chat working. Major cleanups. SocketIO background thread not yet working. The background thread needs to start the Connector that starts broadcast and ZMQ

--- a/dschat/flask/app/templates/chat.html
+++ b/dschat/flask/app/templates/chat.html
@@ -38,7 +38,7 @@
                     socket.disconnect();
 
                     // go back to the login page
-                    window.location.href = "{{ url_for('index') }}";
+                    window.location.href = "{{ url_for('.index') }}";
                 });
             }
         </script>
