Chat ui updates, leave/disconnect messages

--- a/dschat/flask/app/templates/index.html
+++ b/dschat/flask/app/templates/index.html
@@ -10,11 +10,7 @@
         <div class="container"><br><br></div>
         <div class="container text-center" id="outer_container" >
             <div class="well well-lg" style="border-color:blue;background-color:2EFE2E">
-                <h1>Flask</h1>
-                <h1>SocketIO</h1>
-                <h1>Chat</h1>
-
-
+                <h1>Flask SocketIO Chat</h1>
                 <div class="well well-md" id="inner_container" style="border-color:blue;background-color:yellow">
                     <div class="col align-self-center" >
                     <form method="POST">
