--- a/dschat/flask/app/templates/chat.html
+++ b/dschat/flask/app/templates/chat.html
@@ -1,13 +1,14 @@
 <html>
     <head>
         <title>DS2017-Chat: {{ room }}</title>
-        <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
         <script type="text/javascript" charset="utf-8">
             var socket;
             $(document).ready(function(){
-                var keksi = document.cookie;
-                keksi = keksi.split("=");
                 socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
                 socket.on('connect', function() {
                     socket.emit('joined', {});
@@ -19,11 +20,7 @@
                 socket.on('message', function(data) {
                     $('#chat').val($('#chat').val() + data.msg + '\n');
                     $('#chat').scrollTop($('#chat')[0].scrollHeight);
-                    console.log(keksi);
                 });
-                //socket.on('disconnect', function(data) {
-                //    $('#chat').val($('#chat').val() + session.get('name') + ':' + message['msg']
-                //});
                 $('#text').keypress(function(e) {
                     var code = e.keyCode || e.which;
                     if (code == 13) {
@@ -36,7 +33,6 @@
             function leave_room() {
                 socket.emit('left', {}, function() {
                     socket.disconnect();
-
                     // go back to the login page
                     window.location.href = "{{ url_for('.index') }}";
                 });
@@ -44,9 +40,21 @@
         </script>
     </head>
     <body>
-        <h1>Chatting in room: {{ room }}</h1>
-        <textarea id="chat" cols=100% rows="20"></textarea><br><br>
-        <input id="text" size=80% placeholder="Enter your message here"><br><br>
-        <a href="#" onclick="leave_room();">Leave this room</a>
+        <div class="container"><br><br></div>
+        <div class="container text-center" id="outer_container" >
+            <div class="well well-lg" style="border-color:blue;background-color:2EFE2E">
+                <h1>Flask SocketIO Chat</h1>
+                <div class="well well-md" id="inner_container" style="border-color:blue;background-color:yellow">
+                    <div class="col align-self-center" >
+                        <body>
+                            <h1>Chatting in room: {{ room }}</h1>
+                            <textarea id="chat" cols=100% rows="20"></textarea><br><br>
+                            <input id="text" size=80% placeholder="Enter your message here"><br><br>
+                            <a href="#" onclick="leave_room();">Leave room</a>
+                        </body>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
