Browser redir on servercrash

--- a/dschat/flask/app/templates/chat.html
+++ b/dschat/flask/app/templates/chat.html
@@ -29,6 +29,12 @@
                         socket.emit('text', {msg: text});
                     }
                 });
+                socket.on('connect_error', function(e) {
+                    // If server disconnects, force to mainpage
+                    console.log("it works");
+                    socket.disconnect();
+                    window.location.href = "{{ url_for('.index') }}";
+                });
             });
             function leave_room() {
                 socket.emit('left', {}, function() {
